# chippy

./: Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml
src/: main.rs  memory.rs
